--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- kahsfkhsdk -->
     <div id="outter-wrapper">
         <h1 id="logo">FrikiTrivia</h1>
         <div id="intro">Are you ready to challenge yourself?</div>
@@ -31,5 +32,5 @@
 
     </div>
 </body>
-
+<!--hola-->
 </html>
