Co-authored-by: VitoCorleone2022 <VitoCorleone2022@users.noreply.github.com> Co-authored-by: Patricia Z. <Nekosama79@users.noreply.github.com> Co-authored-by: Fer Martin <fernandomartinsantana@gmail.com>

--- a/index.html
+++ b/index.html
@@ -17,18 +17,29 @@
 </head>
 
 <body>
-    <!-- kahsfkhsdk -->
+    
     <div id="outter-wrapper">
         <h1 id="logo">FrikiTrivia</h1>
-        <div id="intro">Are you ready to challenge yourself?</div>
-        <br>
-        <button id="play-btn">Play</button>
-        <button id="question-btn">Get a question</button>
+        <div id="landing">
+            <div id="intro">Are you ready to challenge yourself?</div>
+            <br>
+            <button id="play-btn">Play</button>
+        </div>
 
-        <div id="question"></div>
+        <div id="game">
+            <div id="life">Life: 3</div>
+            <div id="scoreCount">Score: 0</div>
+            <div id="questionCount">0/10</div>
+            <button id="question-btn">Get a question</button>
+            <div id="question"></div>
+            <div id="solution"></div>
+            <div id="next-btn" class="btn">Next</div>
+        </div>
 
-        <div id="solution"></div>
-        <div id="next-btn" class="btn">Next</div>
+        <div id="score">
+            <div id="finalScore">Your final score is: </div>
+            <div id="replay-btn" class="btn">Play again</div>
+        </div>
 
     </div>
 </body>
